Fix save image popup on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -19,17 +19,20 @@ body {
 
 .zoom-container {
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
     position: relative;
-    touch-action: pan-x pan-y pinch-zoom;
 }
 
 #image-container {
     position: relative;
     display: inline-block;
     cursor: crosshair;
-    transform-origin: 0 0;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
 }
 
 #game-image {
@@ -37,7 +40,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     -webkit-user-drag: none;
-    touch-action: pan-x pan-y pinch-zoom;
+    -webkit-touch-callout: none;
 }
 
 .progress-circle {
